--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@ padding-top:15px;
 }
 
 .sidebar button{
-background:#7b2cff;
+background:#5c1bb7;
 border:none;
 color:white;
-width:45px;
-height:45px;
-border-radius:12px;
-margin:10px 0;
 font-size:20px;
+margin:10px 0;
+border-radius:12px;
+width:45px;height:45px;
 cursor:pointer;
 }
 
@@ -44,27 +43,27 @@ padding:20px;
 
 .card{
 width:100%;
-max-width:540px;
-background:rgba(0,0,0,0.6);
+max-width:900px;
+background:rgba(0,0,0,0.55);
 border-radius:20px;
 padding:25px;
-box-shadow:0 0 25px #b94bff;
+box-shadow:0 0 30px #b94bff;
 }
 
-h1,h2{text-align:center;margin:5px;}
+h1,h2,h3{text-align:center;}
 
 input,select,textarea,button{
 width:100%;
 padding:12px;
 border-radius:10px;
 border:none;
-margin-top:10px;
-font-size:15px;
+margin-top:8px;
+font-size:14px;
 }
 
 textarea{min-height:90px;}
+
 .row{display:flex;gap:10px;}
-.row>*{flex:1;}
 
 button{
 background:linear-gradient(90deg,#ff4fd8,#7b5cff);
@@ -73,20 +72,31 @@ font-weight:bold;
 cursor:pointer;
 }
 
-.tabs{display:flex;gap:5px;margin-top:15px;}
-.tabs button{flex:1;background:#35004f;}
-.tabs button.active{background:#ff4fd8;}
-
-.output{min-height:140px;}
-
-img.preview{
-width:100%;
+.preview{
 margin-top:10px;
-border-radius:10px;
+max-width:100%;
+border-radius:12px;
 display:none;
 }
 
-.footer{text-align:center;font-size:12px;opacity:.7;margin-top:15px;}
+.tabs{
+display:flex;
+gap:5px;
+margin-top:15px;
+}
+
+.tabs button{
+flex:1;
+background:#35004f;
+}
+
+.tabs button.active{
+background:#ff4fd8;
+}
+
+.output{min-height:140px;}
+
+.footer{text-align:center;font-size:12px;opacity:.7;margin-top:10px;}
 </style>
 </head>
 
@@ -95,37 +105,37 @@ display:none;
 <div class="wrapper">
 
 <div class="sidebar">
-<button onclick="showPage('ide')">💡</button>
-<button onclick="showPage('gen')">🎬</button>
-<button onclick="showPage('set')">⚙️</button>
+<button onclick="show('idea')">💡</button>
+<button onclick="show('gen')">🎬</button>
+<button onclick="show('set')">⚙️</button>
 </div>
 
 <div class="main">
 <div class="card">
 
 <h1>Febby AI Studio PRO+</h1>
-<h2>UGC Prompt Generator</h2>
+<h2>UGC Ultimate Creator Engine</h2>
 
 <!-- IDE -->
-<div id="pageIde">
-<h3>Generator Ide</h3>
+<div id="idea">
+<h3>Generator Ide Konten</h3>
 <select id="ideaNiche">
 <option>Skincare</option>
 <option>Fashion</option>
 <option>Food</option>
+<option>Makeup</option>
 <option>Elektronik</option>
-<option>Affiliate</option>
 </select>
-
-<button onclick="generateIdea()">Generate Ide</button>
+<button onclick="genIdea()">Generate Ide</button>
 <textarea id="ideaResult"></textarea>
 </div>
 
 <!-- GENERATOR -->
-<div id="pageGen" style="display:none;">
+<div id="gen" style="display:none">
 
 <h3>Detail Produk</h3>
-<input id="productName" placeholder="Nama Produk">
+
+<input id="product" placeholder="Nama Produk">
 <textarea id="benefit" placeholder="Manfaat Produk"></textarea>
 
 <div class="row">
@@ -138,17 +148,13 @@ display:none;
 <option>Non Hijab</option>
 <option>Hijab</option>
 </select>
-</div>
 
 <select id="modelType">
 <option>Dengan Model</option>
 <option>Tangan Saja</option>
 <option>Tanpa Model</option>
-<option>Model Wanita Dewasa</option>
-<option>Model Remaja</option>
-<option>Model Pria</option>
-<option>Couple</option>
 </select>
+</div>
 
 <select id="location">
 <option>Indoor Rumah</option>
@@ -156,96 +162,69 @@ display:none;
 <option>Kamar Mandi</option>
 <option>Dapur</option>
 <option>Ruang Tamu</option>
-<option>Depan Cermin</option>
-<option>Balkon</option>
-<option>Teras Rumah</option>
-<option>Halaman</option>
-<option>Outdoor Jalan</option>
 <option>Cafe</option>
-<option>Restoran</option>
-<option>Mall</option>
 <option>Toko</option>
-<option>Mini Market</option>
+<option>Outdoor</option>
 <option>Studio</option>
-<option>Kantor</option>
-<option>Kampus</option>
 </select>
 
 <select id="style">
 <option>Natural UGC</option>
 <option>Cinematic</option>
-<option>Handheld</option>
 <option>Review</option>
 <option>Testimoni</option>
-<option>Unboxing</option>
+<option>ASMR</option>
+</select>
+
+<select id="overlayMode">
+<option>Berbicara + Teks</option>
+<option>Berbicara Saja</option>
+<option>Teks Saja</option>
+<option>Tanpa Keduanya</option>
 </select>
 
 <h3>Foto Produk</h3>
-<select id="productImageType">
-<option value="none">Tidak Pakai Foto</option>
-<option value="upload">Upload Foto Produk</option>
-</select>
-<input type="file" id="productImage" accept="image/*" onchange="previewProduct(this)">
-<img id="productPreview" class="preview">
+<input type="file" onchange="preview(this,'pPrev')">
+<img id="pPrev" class="preview">
 
 <h3>Foto Model</h3>
-<select id="modelImageType">
-<option value="none">Tidak Pakai Foto</option>
-<option value="upload">Upload Foto Model</option>
-</select>
-<input type="file" id="modelImage" accept="image/*" onchange="previewModel(this)">
-<img id="modelPreview" class="preview">
+<input type="file" onchange="preview(this,'mPrev')">
+<img id="mPrev" class="preview">
 
-<h3>Efek Video</h3>
-<label><input type="checkbox" id="noface"> No Face</label>
-<label><input type="checkbox" id="closeup"> Close Up</label>
-<label><input type="checkbox" id="shake"> Goyang Produk</label>
-<label><input type="checkbox" id="zoomin"> Zoom In</label>
-<label><input type="checkbox" id="zoomout"> Zoom Out</label>
+<h3>Efek</h3>
+<label><input type="checkbox" id="noface">No Face</label>
+<label><input type="checkbox" id="closeup">Close Up</label>
+<label><input type="checkbox" id="shake">Goyang Produk</label>
+<label><input type="checkbox" id="zoom">Zoom</label>
 
 <h3>Scene & Durasi</h3>
 
-<div class="row">
-<input id="d1" value="5">
-<input id="s1" placeholder="Scene 1">
-</div>
-<div class="row">
-<input id="d2" value="5">
-<input id="s2" placeholder="Scene 2">
-</div>
-<div class="row">
-<input id="d3" value="5">
-<input id="s3" placeholder="Scene 3">
-</div>
-<div class="row">
-<input id="d4" value="5">
-<input id="s4" placeholder="Scene 4">
-</div>
+<div class="row"><input id="d1" value="5"><input id="s1" placeholder="Scene 1"></div>
+<div class="row"><input id="d2" value="5"><input id="s2" placeholder="Scene 2"></div>
+<div class="row"><input id="d3" value="5"><input id="s3" placeholder="Scene 3"></div>
+<div class="row"><input id="d4" value="5"><input id="s4" placeholder="Scene 4"></div>
 
-<input id="total" readonly placeholder="Total Durasi">
+<input id="total" placeholder="Total Durasi">
 
-<button onclick="generateAll()">GENERATE</button>
+<button onclick="generate()">GENERATE</button>
 
 <div class="tabs">
-<button class="active" onclick="setTab('prompt')">Prompt</button>
-<button onclick="setTab('caption')">Caption</button>
-<button onclick="setTab('hashtag')">Hashtag</button>
-<button onclick="setTab('hook')">Hook</button>
-<button onclick="setTab('cta')">CTA</button>
+<button onclick="tab='prompt'">Prompt</button>
+<button onclick="tab='caption'">Caption</button>
+<button onclick="tab='hashtag'">Hashtag</button>
+<button onclick="tab='hook'">Hook</button>
+<button onclick="tab='cta'">CTA</button>
 </div>
 
 <textarea id="result" class="output"></textarea>
-<button onclick="copyResult()">COPY</button>
+<button onclick="copy()">COPY</button>
 
 </div>
 
 <!-- SETTINGS -->
-<div id="pageSet" style="display:none;">
+<div id="set" style="display:none">
 <h3>Pengaturan</h3>
-<label>Warna Background</label>
 <input type="color" onchange="document.body.style.background=this.value">
-<label>Upload Background</label>
-<input type="file" accept="image/*" onchange="setBG(this)">
 </div>
 
 <div class="footer">Gratis • Local App • No API</div>
@@ -255,86 +234,78 @@ display:none;
 </div>
 
 <script>
-let activeTab="prompt";
+let tab="prompt";
 
-function showPage(p){
-pageIde.style.display="none";
-pageGen.style.display="none";
-pageSet.style.display="none";
-if(p=="ide") pageIde.style.display="block";
-if(p=="gen") pageGen.style.display="block";
-if(p=="set") pageSet.style.display="block";
+function show(x){
+idea.style.display="none";
+gen.style.display="none";
+set.style.display="none";
+document.getElementById(x).style.display="block";
 }
 
-function setTab(t){activeTab=t;}
-
-function generateIdea(){
-let ideas=["Before After","Review Jujur","Unboxing","Tekstur Close Up","Cara Pakai"];
-ideaResult.value=ideas[Math.floor(Math.random()*ideas.length)];
+function genIdea(){
+let arr=[
+"Before After",
+"Review Jujur",
+"Tekstur Closeup",
+"ASMR Pemakaian",
+"Unboxing",
+"Daily Routine"
+];
+ideaResult.value=arr[Math.floor(Math.random()*arr.length)];
 }
 
-function previewProduct(i){
-let f=i.files[0];
+function preview(input,id){
+let f=input.files[0];
+if(!f)return;
 let r=new FileReader();
-r.onload=()=>{productPreview.src=r.result;productPreview.style.display="block";}
+r.onload=()=>{let i=document.getElementById(id);i.src=r.result;i.style.display="block";}
 r.readAsDataURL(f);
 }
 
-function previewModel(i){
-let f=i.files[0];
-let r=new FileReader();
-r.onload=()=>{modelPreview.src=r.result;modelPreview.style.display="block";}
-r.readAsDataURL(f);
-}
+function generate(){
 
-function generateAll(){
 let totalDur=(+d1.value)+(+d2.value)+(+d3.value)+(+d4.value);
 total.value=totalDur+" detik";
 
-let eff=[];
-if(noface.checked) eff.push("no face");
-if(closeup.checked) eff.push("close-up");
-if(shake.checked) eff.push("shake product");
-if(zoomin.checked) eff.push("zoom in");
-if(zoomout.checked) eff.push("zoom out");
+let effects=[];
+if(noface.checked)effects.push("no face");
+if(closeup.checked)effects.push("close-up");
+if(shake.checked)effects.push("shake product");
+if(zoom.checked)effects.push("zoom");
 
-let prompt=
-`Create ${style.value} video
-Product: ${productName.value}
+let prompt=`Create ${style.value} UGC video.
+Product: ${product.value}
 Benefits: ${benefit.value}
+Model: ${modelType.value}
 Gender: ${gender.value}
 Hijab: ${hijab.value}
-Model: ${modelType.value}
 Location: ${location.value}
-Effects: ${eff.join(",")}
+Overlay Mode: ${overlayMode.value}
+Effects: ${effects.join(",")}
 
-Scene1 (${d1.value}s): ${s1.value}
-Scene2 (${d2.value}s): ${s2.value}
-Scene3 (${d3.value}s): ${s3.value}
-Scene4 (${d4.value}s): ${s4.value}`;
+Scene1(${d1.value}s): ${s1.value}
+Scene2(${d2.value}s): ${s2.value}
+Scene3(${d3.value}s): ${s3.value}
+Scene4(${d4.value}s): ${s4.value}
 
-let caption=`${productName.value} bikin kaget 😍`;
-let hashtag=`#ugc #fyp #reviewproduk`;
-let hook=`Stop scroll!`;
-let cta=`Klik keranjang sekarang!`;
+Include strong hook, caption and CTA.`;
 
-if(activeTab=="prompt") result.value=prompt;
-if(activeTab=="caption") result.value=caption;
-if(activeTab=="hashtag") result.value=hashtag;
-if(activeTab=="hook") result.value=hook;
-if(activeTab=="cta") result.value=cta;
+let caption=`Aku baru coba ${product.value} dan hasilnya bikin kaget 😍`;
+let hashtag="#ugc #fyp #reviewproduk";
+let hook="Stop scroll! Ini solusi kamu!";
+let cta="Klik keranjang sekarang!";
+
+if(tab=="prompt")result.value=prompt;
+if(tab=="caption")result.value=caption;
+if(tab=="hashtag")result.value=hashtag;
+if(tab=="hook")result.value=hook;
+if(tab=="cta")result.value=cta;
 }
 
-function copyResult(){
+function copy(){
 navigator.clipboard.writeText(result.value);
 alert("Disalin!");
-}
-
-function setBG(i){
-let f=i.files[0];
-let r=new FileReader();
-r.onload=()=>{document.body.style.background=`url(${r.result}) center/cover no-repeat`;}
-r.readAsDataURL(f);
 }
 </script>
 
